; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_mempack.c_test_odb_backend_mempack__initialize.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_mempack.c_test_odb_backend_mempack__initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_odb = common dso_local global i32 0, align 4
@_repo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_backend_mempack__initialize() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @git_mempack_new(i32** %1)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = call i32 @git_odb_new(i32* @_odb)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @_odb, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_odb_add_backend(i32 %6, i32* %7, i32 10)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @_odb, align 4
  %11 = call i32 @git_repository_wrap_odb(i32* @_repo, i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_mempack_new(i32**) #1

declare dso_local i32 @git_odb_new(i32*) #1

declare dso_local i32 @git_odb_add_backend(i32, i32*, i32) #1

declare dso_local i32 @git_repository_wrap_odb(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
